### Add GML transformation for OGC bridge (HEAD -> main)
>Tue, 11 Oct 2022 18:50:24 +0200

>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)




### Remove IAU logo Add PADC logo (tag: v0.9.1, origin/main, origin/HEAD)
>Tue, 7 Jun 2022 11:23:35 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Fix comma in setup.py
>Mon, 9 May 2022 15:56:17 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Fix missing logo
>Mon, 9 May 2022 15:52:16 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Fix vendor name for deploy Fix logo problem
>Mon, 9 May 2022 15:13:39 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Change vendor name of the docker image
>Mon, 9 May 2022 14:51:24 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Add new WKTs Update website (logo, the display of WKTs) (tag: v0.9.0)
>Mon, 9 May 2022 14:31:17 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Add section with virtual env Add section with docker
>Fri, 9 Jul 2021 07:29:18 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Fix path
>Thu, 8 Jul 2021 13:32:28 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)
