@@ -1,4 +1,14 @@
-### Add GML transformation for OGC bridge (HEAD -> main)
+### Fix count Ws by changing the order of the routes in the router (HEAD -> main)
+>Wed, 12 Oct 2022 03:05:29 +0200
+
+>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)
+
+>Commiter: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)
+
+
+
+
+### Add GML transformation for OGC bridge (origin/main, origin/HEAD)
 >Tue, 11 Oct 2022 18:50:24 +0200
 
 >Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)
@@ -8,7 +18,7 @@
 
 
 
-### Remove IAU logo Add PADC logo (tag: v0.9.1, origin/main, origin/HEAD)
+### Remove IAU logo Add PADC logo (tag: v0.9.1)
 >Tue, 7 Jun 2022 11:23:35 +0200
 
 >Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)
